Added login note to posts collection view

--- a/js/templates/posts.hbs
+++ b/js/templates/posts.hbs
@@ -1,5 +1,7 @@
 <h2>Moviepilot.com Facebook Wall Posts</h2>
 
+<p class="login-note">You need to be logged in to see the wall posts.</p>
+
 <ol></ol>
 
 <p class="loading">Loading…</p>
