Add doc layout improvements

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -2,10 +2,13 @@
 <html lang="en">
 <head>
   <meta http-equiv='Content-Type' content='text/html; charset=utf-8'>
-  <title>{{ page.title }}</title>
+  <title>
+    {% if page.title %} {{ page.title }} &middot; {% endif %} Chaplin Documentation
+  </title>
   <link rel="stylesheet" type="text/css" href="http://chaplinjs.org/stylesheets/application.css">
   <link rel="stylesheet" type="text/css" href="stylesheets/main.css">
   <link rel="stylesheet" type="text/css" href="stylesheets/pygments.css">
+  <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script src="javascripts/main.js"></script>
   <!--[if lt IE 9]>
