--- a/docs/stylesheets/main.css
+++ b/docs/stylesheets/main.css
@@ -1,42 +1,109 @@
 /* LAYOUT */
-html {
-  text-align: center;
-}
 body {
-  width: 50%;
-  min-width: 690px;
-  margin: 0 auto;
   text-align: left;
 }
 header {
-  padding: 10px;
-  min-height: auto;
-}
-header h1 {
-  font-size: 14pt;
-  text-align: left;
+  padding: 1em;
+  text-align: center;
 }
 header h1 a {
-  color: white;
+  display: block;
+  text-indent: -10000px;
+  overflow: hidden;
+  width: 100%;
+  height: 120px;
+  background-image: url('../images/chaplin.png');
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center center;
+}
+#sidebar {
+  padding: 1em;
 }
 #content {
-  clear: both;
   padding: 1em 0;
 }
 /* LANGUAGE SWITCHER */
 form.language {
-  float: right;
-  color: white;
+  text-align: left;
 }
-.show-coffeescript .coffeescript {
+form.language legend {
+  margin: 0;
+  line-height: 160%;
+  border: none;
+  font-size: 100%;
+}
+form.language ul {
+  list-style-type: none;
+  list-style-image: none;
+  padding: 0;
+}
+form.language ul:after {
+  content: ".";
+  display: block;
+  width: 0;
+  height: 0;
+  overflow: hidden;
+  clear: both;
+}
+form.language li {
+  display: block;
+  position: relative;
+  float: left;
+  width: 50%;
+  height: 32px;
+  padding: 0;
+  margin: 0;
+  background: white;
+  background-color: rgba(255,255,255,0.75);
+  background-repeat: no-repeat;
+  background-position: top right;
+  cursor: pointer;
+  color: #BBB;
+}
+form.language li.coffeescript {
+  width: 49%;
+  margin-right: 1%;
+}
+form.language .active {
+  color: #666;
+}
+form.language .active:after {
+  content: "";
+  display: block;
+  width: 0;
+  height: 0;
+  position: absolute;
+  right: 50%;
+  margin-left: -2px;
+  top: 100%;
+  border: 5px solid transparent;
+  border-bottom-color: #666;
+}
+form.language input {
+  display: none;
+}
+form.language label {
+  line-height: 32px;
+  text-indent: 5%;
+  cursor: pointer;
+}
+form.language .coffeescript {
+  background-image: url('../images/coffeescript.png');
+}
+form.language .javascript {
+  background-image: url('../images/javascript.png');
+}
+/* INLINE CODE */
+.show-coffeescript span.coffeescript {
   display: inline;
 }
-.show-coffeescript .javascript {
+.show-coffeescript span.javascript {
   display: none;
 }
-.show-javascript .coffeescript {
+.show-javascript span.coffeescript {
   display: none;
 }
-.show-javascript .javascript {
+.show-javascript span.javascript {
   display: inline;
 }
