Add persistent module information

--- a/docs/stylesheets/main.css
+++ b/docs/stylesheets/main.css
@@ -2,11 +2,11 @@
 body {
   text-align: left;
 }
-header {
+.site-header {
   padding: 1em;
   text-align: center;
 }
-header h1 a {
+.site-header h1 a {
   display: block;
   text-indent: -10000px;
   overflow: hidden;
@@ -24,7 +24,25 @@ header h1 a {
   line-height: 1.25;
 }
 #content {
-  padding: 1em 0;
+  padding: 56px 0 0;
+}
+.module-info {
+  position: fixed;
+  top: 0;
+  padding: 7px 0;
+  width: 100%;
+  background-color: #F5F1E8;
+  background: -moz-linear-gradient(top, rgba(245,241,232,1) 0%, rgba(245,241,232,1) 6%, rgba(245,241,232,1) 75%, rgba(245,241,232,0) 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(245,241,232,1)), color-stop(6%,rgba(245,241,232,1)), color-stop(75%,rgba(245,241,232,1)), color-stop(100%,rgba(245,241,232,0)));
+  background: -webkit-linear-gradient(top, rgba(245,241,232,1) 0%,rgba(245,241,232,1) 6%,rgba(245,241,232,1) 75%,rgba(245,241,232,0) 100%);
+  background: -o-linear-gradient(top, rgba(245,241,232,1) 0%,rgba(245,241,232,1) 6%,rgba(245,241,232,1) 75%,rgba(245,241,232,0) 100%);
+  background: -ms-linear-gradient(top, rgba(245,241,232,1) 0%,rgba(245,241,232,1) 6%,rgba(245,241,232,1) 75%,rgba(245,241,232,0) 100%);
+  background: linear-gradient(to bottom, rgba(245,241,232,1) 0%,rgba(245,241,232,1) 6%,rgba(245,241,232,1) 75%,rgba(245,241,232,0) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f5f1e8', endColorstr='#00f5f1e8',GradientType=0 );
+}
+.module-info a {
+  font-size: 14px;
+  vertical-align: middle;
 }
 /* LANGUAGE SWITCHER */
 form.language {
