--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -24,7 +24,7 @@ version: 0.9.0
 <body class="container-fluid">
   <div class="row-fluid">
   <div class="span3">
-  <header>
+  <header class="site-header">
     <h1><a href="/">Chaplin Documentation</a></h1>
   </header>
   <nav id="sidebar">
@@ -51,15 +51,16 @@ version: 0.9.0
   </nav>
   </div>
   <div id="content" class="span9">
+    <header class="module-info">
     {% if page.title %}
     <h1>
+      {{ page.title }}
       {% if page.module_path %}
-        <a href="{{ page.source_base }}{{ page.version }}/{{ page.module_path }}">{{ page.title }}</a>
-      {% else %}
-        {{ page.title }}
+        <a href="{{ page.source_base }}{{ page.version }}/{{ page.module_path }}">&rarr; Source</a>
       {% endif %}
     </h1>
     {% endif %}
+    </header>
     {{ content }}
   </div>
   </div>
