Add fixed docs sidebar on desktop resolutions

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -23,11 +23,11 @@ version: 0.9.0
 </head>
 <body class="container-fluid">
   <div class="row-fluid">
-  <div class="span3">
+  <div class="span3 sidebar">
   <header class="site-header">
     <h1><a href="/">Chaplin Documentation</a></h1>
   </header>
-  <nav id="sidebar">
+  <nav>
     <h2>Modules</h2>
     <form action="" class="language">
       <fieldset>
