--- a/docs/stylesheets/main.css
+++ b/docs/stylesheets/main.css
@@ -56,11 +56,10 @@ form.language ul:after {
 form.language li {
   display: block;
   position: relative;
-  float: left;
-  width: 50%;
+  width: 100%;
   height: 32px;
   padding: 0;
-  margin: 0;
+  margin: 0 0 2px;
   background: white;
   background-color: rgba(255,255,255,0.75);
   background-repeat: no-repeat;
@@ -72,24 +71,21 @@ form.language li:active {
   top: 1px;
   left: 1px;
 }
-form.language li.coffeescript {
-  width: 49%;
-  margin-right: 1%;
-}
 form.language .active {
-  color: #666;
+  background-color: #666;
+  color: white;
 }
-form.language .active:after {
+form.language .active:before {
   content: "";
   display: block;
   width: 0;
   height: 0;
   position: absolute;
-  right: 50%;
-  margin-left: -2px;
-  top: 100%;
+  top: 50%;
+  left: 8px;
+  margin-top: -5px;
   border: 5px solid transparent;
-  border-bottom-color: #666;
+  border-left-color: white;
 }
 form.language input {
   position: relative;
@@ -98,11 +94,14 @@ form.language input {
 form.language label {
   overflow: hidden;
   line-height: 32px;
-  text-indent: 5%;
+  text-indent: 4px;
   cursor: pointer;
 }
 form.language .coffeescript {
   background-image: url('../images/coffeescript.png');
+}
+form.language .coffeescript.active {
+  background-image: url('../images/coffeescript-inverted.png');
 }
 form.language .javascript {
   background-image: url('../images/javascript.png');
