Fix image style.

--- a/docs/stylesheets/main.css
+++ b/docs/stylesheets/main.css
@@ -119,6 +119,11 @@ form.language .javascript {
 .show-javascript span.javascript {
   display: inline;
 }
+
+img[*="chaplin-lifecycle.png"] {
+  width: 100%;
+}
+
 /* Device Dependent */
 @media (min-width: 768px) { /* Desktop */
   .sidebar {
