--- a/docs/stylesheets/main.css
+++ b/docs/stylesheets/main.css
@@ -199,7 +199,7 @@ img[src$="chaplin-lifecycle.png"] {
   #content {
     /*margin-left: 25.64%;*/
     position: absolute;
-    right: 20px;
+  right: 103px;
   }
   .module-info {
     /*position: fixed;*/
@@ -214,7 +214,7 @@ img[src$="chaplin-lifecycle.png"] {
     width: 185px;
     top: 10px;
     /*left: 50%;*/
-    /*margin-left: -540px;*/
+    margin-left: -570px;
   }
   .toggle-navigation {
     display: none;
