--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -64,7 +64,7 @@ version: 0.10.0
           <li><a href="http://chaplinjs.org" data-pattern="\/\/chaplinjs\.org/(#.*)?$">About</a></li>
           <li><a class="active" href="http://docs.chaplinjs.org" data-pattern="docs\.chaplinjs">Documentation</a></li>
           <li><a href="http://chaplinjs.org/examples.html" data-pattern="examples\.html$">Examples</a></li>
-          <li><a href="http://chaplinjs.org/community.html" data-pattern="community\.html$">Community</a></li>
+          <li><a href="http://chaplinjs.org/support.html" data-pattern="support\.html$">Support</a></li>
         </ul>
       </div>
     </header>
