--- a/docs/stylesheets/main.css
+++ b/docs/stylesheets/main.css
@@ -243,7 +243,7 @@ img[src$="chaplin-lifecycle.png"] {
   }
 
   .sidebar {
-    position: absolute;
+    position: fixed;
     width: 185px;
     top: 10px;
     left: 50%;
