--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -9,7 +9,9 @@ version: 0.11.2
   <title>
     {% if page.title %} {{ page.title }} &middot; {% endif %} Chaplin Documentation
   </title>
-  <link rel="stylesheet" type="text/css" href="http://chaplinjs.org/stylesheets/application.css">
+  <link rel="stylesheet" href="http://brunch.io/stylesheets/normalize.css">
+  <link rel="stylesheet" href="http://brunch.io/stylesheets/base.css">
+  <link rel="stylesheet" href="http://chaplinjs.org/stylesheets/application.css">
   <link rel="stylesheet" type="text/css" href="stylesheets/main.css">
   <link rel="stylesheet" type="text/css" href="stylesheets/pygments.css">
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
