Update layout links.

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -9,8 +9,8 @@ version: 0.11.3
   <title>
     {% if page.title %} {{ page.title }} &middot; {% endif %} Chaplin Documentation
   </title>
-  <link rel="stylesheet" href="http://brunch.io/stylesheets/normalize.css">
-  <link rel="stylesheet" href="http://brunch.io/stylesheets/base.css">
+  <link rel="stylesheet" href="http://chaplinjs.org/stylesheets/normalize.css">
+  <link rel="stylesheet" href="http://chaplinjs.org/stylesheets/base.css">
   <link rel="stylesheet" href="http://chaplinjs.org/stylesheets/application.css">
   <link rel="stylesheet" type="text/css" href="stylesheets/main.css">
   <link rel="stylesheet" type="text/css" href="stylesheets/pygments.css">
